fix: have better spacing on empty accordion

--- a/project/parttofe/partto/src/components/DefinitionListed/DefinitionListed.module.scss
+++ b/project/parttofe/partto/src/components/DefinitionListed/DefinitionListed.module.scss
@@ -1,6 +1,7 @@
 @import "../../App.scss";
 
 .noneSpecified {
+  padding-top: var(--gap-medium);
   font: var(--font-regular-medium);
   font-style: italic;
 }
